fix: update iframe alignment for consistent styling and improved presentation

--- a/_sass/_includes/_content.scss
+++ b/_sass/_includes/_content.scss
@@ -261,3 +261,8 @@
 iframe {
 	border: none;
 }
+
+// Centered content wrapper
+.align-center {
+	text-align: center;
+}
